# chai

./: .gitignore
testing/: ai_params.txt  helperFuncs.py  play.py
training/: CMakeLists.txt
training/libs/differential-evolution/include/: DifferentialEvolution.h
training/libs/the-chess-library/: CMakeLists.txt
training/libs/the-chess-library/include/: thc.h
training/libs/the-chess-library/src/: thc.cpp
training/src/: main.cpp
